# agent-architecture-review-sample

./: .env.template  .gitignore  AGENTS.md  Dockerfile  Dockerfile.web  README.md  SUPPORT.md  TEST_REPORT_WEB_VS_CLI.md  agent.yaml  api.py  azure.yaml  blog_post.md  deployment.md  main.py  pyproject.toml  requirements.txt  run_local.py  tools.py
docs/: README.md  azd-local.md  deployment.md
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: ComponentMap.jsx  DiagramViewer.jsx  Recommendations.jsx  RiskTable.jsx  Summary.jsx
scripts/: README.md  record_demo.py
scripts/linux-mac/: README.md  deploy-agent.sh  deploy-webapp.sh  deploy.sh  dev.sh  setup.sh  teardown.sh
scripts/windows/: README.md  deploy-agent.ps1  deploy-webapp.ps1  deploy.ps1  dev.ps1  setup.ps1  teardown.ps1
tests/: README.md  conftest.py  test_api.py  test_integration.py  test_tools.py
